# qrbit

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsdown.config.ts  tsup.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  code-coverage.yml  platform-build.yml  release.yml  tests.yml
.github/workflows/workflows/: tests.yml
benchmark/: qrbit-vs-qrcode.ts  qrcode-common-png.ts  qrcode-common-svg.ts  qrcode-jpg.ts  qrcode-logo.ts  qrcode-png.ts  qrcode-svg.ts  qrcode-webp.ts  qrcode.ts  update-readme.ts  utils.ts
examples/: README.md
scripts/: audit-diff.mjs  examples.ts  generate-examples.ts
src/: index.ts  lib.rs  nodeqr.rs  qrbit.ts
test/: jpg.test.ts  parity.test.ts  qrbit.test.ts  verify.test.ts  webp.test.ts
