[package]
name = "qrbit"
version = "0.1.0"
edition = "2021"
authors = ["Jared Wray <me@jaredwray.com>"]
description = "A fast QR code generator with logo embedding support"
license = "MIT"
repository = "https://github.com/jaredwray/qrbit"

[lib]
crate-type = ["cdylib"]

[dependencies]
qrcode = "0.14"
image = { version = "0.25", features = ["png", "jpeg"] }
imageproc = "0.26.0"
svg = "0.18"
base64 = "0.22"
resvg = "0.45"
tiny-skia = "0.11"
napi        = "3.8.2"
napi-derive = "3.5.1"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
