[package]
name = "qrbit"
version = "0.1.0"
edition = "2021"
authors = ["Jared Wray <me@jaredwray.com>"]
description = "A fast QR code generator with logo embedding support"
license = "MIT"
repository = "https://github.com/jaredwray/qrbit"

[lib]
crate-type = ["cdylib"]

[dependencies]
qrcode = "0.14"
image = { version = "0.25.10", features = ["png", "jpeg", "webp"] }
imageproc = "0.26.2"
svg = "0.18"
base64 = "0.22"
resvg = "0.47"
tiny-skia = "0.12"
napi = "3.8.6"
napi-derive = "3.5.5"
quircs = "0.10"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
